@@ -4,6 +4,8 @@
 	 (save function before subsstring)
 	* foreign.d (check_faddress_valid): fix a GC-safety bug
 	 (check_fpointer can trigger GC!)
+	* modules/clx/new-clx/clx.f (XLIB:SCREEN-SAVER): fix a GC-safety bug
+	 (defcheckers are GC-unsafe)
 
 2008-07-10  Sam Steingold  <sds@gnu.org>
 
